--- a/html-basic.html
+++ b/html-basic.html
@@ -36,9 +36,11 @@
   &lt;!--这段注释需要出现在页面里面--&gt;
   <p></p>
   <p></p>
-  <p>function a() {</p>
-  <p>return 8</p>
-  <p>}</p>
+  <br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="1.5px" face="宋体">function a()&nbsp;{</font><br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="1.5px" face="宋体">return 8</font><br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="1.5px" face="宋体">}</font>
+  <p></p>
   <hr>
   <ul>
     <li>
