--- a/html-basic.html
+++ b/html-basic.html
@@ -144,7 +144,70 @@
       </dd>
     </dl>
   </dt>
-  <div id="dibu"></div>
+  <fieldset>
+    <legend>这里全部禁用了</legend>
+    <input type="text" disabled="">
+    <input type="text" disabled="">
+    <input type="text" disabled="">
+    <input type="text" disabled="">
+  </fieldset>
+  <button>提交</button>
+  <button>重置</button>
+  <hr>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>编号</th>
+        <th>品名</th>
+        <th>进价</th>
+        <th>出价</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th>aaa</th>
+        <td>a</td>
+        <td rowspan="2">a</td>
+        <td>a</td>
+      </tr>
+      <tr>
+        <th>a</th>
+        <td>a</td>
+        <td>a</td>
+      </tr>
+      <tr>
+        <th>a</th>
+        <td>a</td>
+        <td>a</td>
+        <td>a</td>
+      </tr>
+      <tr>
+        <th>a</th>
+        <td>a</td>
+        <td>a</td>
+        <td>a</td>
+      </tr>
+    </tbody>
+    <colgroup>
+      <col>
+      <col bgcolor="red">
+    </colgroup>
+  </table>
+  <hr>
+  <img usemap="#xxx1" src="https://drscdn.500px.org/photo/174778125/m%3D1170_k%3D1/2841ccf2a3720e8e794a6a6930f6ff2c"
+    alt="" width="300px">
+  <map name="xxx1">
+    <area shape="rect" coords="50,200,200,100" href="http://www.baidu.com" target="_blank">
+    <area shape="circle" coords="223,360,160" href="http://www.baidu.com" target="_blank">
+  </map>
+  <hr>
+  <a href="http://xiaomi.com" target="re">小米</a>
+  <div></div>
+  <iframe name="re" src="https://nodejs.org/en" frameborder="1"></iframe>
+  <div>aaa&nbsp;&nbsp;&nbsp;&nbsp;bbbbb</div>
+  <pre>aaa&nbsp;&nbsp;&nbsp;bbbbb</pre>
+  >>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<< &lt;span&gt;&lt;/span&gt; <div id="dibu">
+    </div>
 </body>
 
 </html>
