--- a/html-basic.html
+++ b/html-basic.html
@@ -23,11 +23,11 @@
   <a href="#dibu">跳到页面底部</a>
   <a href="aaa" download="aaa.pdf">点我下载文件</a><br>
   <img
-    src="https://drscdn.500px.org/photo/229389427/m%3D1170/v2?user_id=7012987&webp=true&sig=196fa0c161aa562478d08571764872f7d69a346c3c0b2e12aa00e2c6414eb28b"
-    alt="" width="200px" height="200px">
+    src="https://i1.hdslb.com/bfs/archive/ce5fa2bd5fba727ae07dc9e1c97315eef54409d3.jpg@672w_378h_1c_!web-search-common-cover.avif"
+    alt="" width="300">
   <hr>
   <hr>
-  <marquee> piao </marquee>
+  <marquee> 珠堕 </marquee>
   <em>这几种强调</em>
   <strong>有</strong>
   <b>什么区别？</b>
@@ -61,23 +61,17 @@
     <li>大学</li>
   </ul>
   <hr>
-  <dt>
-    <dl>
-      班级
-      <dd>三年二班</dd>
-    </dl>
-    <dl>
-      老师
-      <dd>张老师</dd>
-      <dd>李老师</dd>
-      <dd>王老师</dd>
-    </dl>
-    <dl>
-      学生
-      <dd>小明</dd>
-      <dd>豆豆</dd>
-    </dl>
-  </dt>
+  <dl>
+    <dt>班级</dt>
+    <dd>三年二班</dd>
+    <dt>老师</dt>
+    <dd>张老师</dd>
+    <dd>李老师</dd>
+    <dd>王老师</dd>
+    <dt>学生</dt>
+    <dd>小明</dd>
+    <dd>豆豆</dd>
+  </dl>
   <hr>
   <h2>Google搜索</h2>
   <form action="https://www.google.com.hk/search" target="_blank">
@@ -88,64 +82,52 @@
   </form>
   <hr>
   <p>个人信息调查表</p>
-  <dt>
-    <dl>
-      性别
-      <dd>
-        <label>
-          <input type="radio" name="gender" value="man">男
-        </label>
-        <label>
-          <input type="radio" name="gender" value="women">女
-        </label>
-      </dd>
-    </dl>
-    <dl>
-      年龄
-      <dd>
-        <select name="age" id="">
-          <option value="">请选择</option>
-          <optgroup label="少年">
-            <option value="">1-6岁</option>
-            <option value="">6-12岁</option>
-          </optgroup>
-          <optgroup label="青年">
-            <option value="">13-15岁</option>
-            <option value="">16-18岁</option>
-          </optgroup>
-          <optgroup label="少年">
-            <option value="">1-6岁</option>
-            <option value="">6-12岁</option>
-          </optgroup>
-        </select>
-      </dd>
-    </dl>
-    <dl>
-      生日
-      <dd>
-        <input type="date" value="2021-11-04">
-      </dd>
-    </dl>
-    <dl>
-      生辰
-      <dd>
-        <input type="time">
-      </dd>
-    </dl>
-    <dl>
-      照片
-      <dd>
-        <input hidden type="file" id="upload">
-        <label for="upload">点我上传照片，我比文件上传按钮好看</label>
-      </dd>
-    </dl>
-    <dl>
-      自我介绍
-      <dd>
-        <textarea name="" id="" cols="30" rows="10">&lt;/textarea&gt;</textarea>
-      </dd>
-    </dl>
-  </dt>
+  <dl>
+    <dt>性别</dt>
+    <dd>
+      <label>
+        <input type="radio" name="gender" value="man">男
+      </label>
+      <label>
+        <input type="radio" name="gender" value="women">女
+      </label>
+    </dd>
+    <dt>年龄</dt>
+    <dd>
+      <select name="age" id="">.
+        <option value="">请选择</option>
+        <optgroup label="少年">
+          <option value="1-6岁">1-6岁</option>
+          <option value="6-12岁">6-12岁</option>
+        </optgroup>
+        <optgroup label="青年">
+          <option value="12-15岁">12-15岁</option>
+          <option value="15-18岁">15-18岁</option>
+        </optgroup>
+        <optgroup label="少年">
+          <option value="1-6岁">1-6岁</option>
+          <option value="6-12岁">6-12岁</option>
+        </optgroup>
+      </select>
+    </dd>
+    <dt>生日</dt>
+    <dd>
+      <input type="date" value="2023-03-21">
+    </dd>
+    <dt>生辰</dt>
+    <dd>
+      <input type="time">
+    </dd>
+    <dt>照片</dt>
+    <dd>
+      <input type="file" hidden id="upload">
+      <label for="upload">点我上传</label>
+    </dd>
+    <dt>自我介绍</dt>
+    <dd>
+      <textarea name="" id="" cols="30" rows="10">&lt;/textarea&gt;</textarea>
+    </dd>
+  </dl>
   <fieldset>
     <legend>这里全部禁用了</legend>
     <input type="text" disabled="">
