--- a/html-basic.html
+++ b/html-basic.html
@@ -75,8 +75,7 @@
   <hr>
   <fieldset>
     <legend>
-      <img width="150px" src="https://www.google.com.hk/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
-        alt="">
+      <img width="150px" src="./img/googlelogo_color_272x92dp.png" alt="">
     </legend>
     <form action="https://www.google.com.hk/search" target="_blank">
       <input type="text" name="q">
