--- a/html-basic.html
+++ b/html-basic.html
@@ -193,7 +193,8 @@
     <tbody>
       <tr>
         <th>
-          <a href="https://img.nga.178.com/attachments/mon_202211/14/ncQ0-kmzcK1pT1kSdg-dn.jpeg" target="re">?</a>
+          <a href="https://i2.hdslb.com/bfs/archive/1c8872991116d6e75a83b67621969d8e5a095fc5.jpg@672w_378h_1c_!web-search-common-cover.avif"
+            target="re">?</a>
         </th>
         <td rowspan="3">
           <iframe name="re" src="https://nodejs.org/en" frameborder="1" width="500px" target="_blank"></iframe>
