--- a/html-basic.html
+++ b/html-basic.html
@@ -193,8 +193,7 @@
     <tbody>
       <tr>
         <th>
-          <a href="https://i2.hdslb.com/bfs/archive/1c8872991116d6e75a83b67621969d8e5a095fc5.jpg@672w_378h_1c_!web-search-common-cover.avif"
-            target="re">?</a>
+          <a href="https://game.granbluefantasy.jp/" target="re">P</a>
         </th>
         <td rowspan="3">
           <iframe name="re" src="https://nodejs.org/en" frameborder="1" width="500px" target="_blank"></iframe>
