--- a/html-basic.html
+++ b/html-basic.html
@@ -6,18 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    .p1 {
+      color: red;
+    }
+  </style>
 </head>
 
 <body>
   <h1>lorem</h1>
   <h2>Lorem,ipsum.</h2>
   <h3>Lorem, ipsum dolor.</h3>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam porro adipisci unde optio sit maxime nihil
+  <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam porro adipisci unde optio sit maxime
+    nihil
     mollitia consequuntur, enim dolorem explicabo accusantium? Optio nulla atque, ducimus illo aliquam a vitae?</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptate nihil dignissimos! Totam, quae.
+  <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptate nihil dignissimos! Totam,
+    quae.
     Laudantium impedit vel officia harum debitis ullam reiciendis, itaque ducimus fugiat dolorem quis. Explicabo, non
     eum.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, quasi?</p>
+  <p class="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, quasi?</p>
   <a href="www.jd.com" target="_blank">在新窗口打开京东</a>
   <a href="mailto:aaa@qqq.com">点我发邮件</a>
   <a href="#dibu">跳到页面底部</a>
