--- a/css-selector-practise.html
+++ b/css-selector-practise.html
@@ -76,7 +76,7 @@
       color: pink;
     }
 
-    .prime ul li:not(:nth-child(2n+4)) {
+    .prime ul li:not(:nth-child(2n+4)):not(:first-child) {
       color: purple;
     }
   </style>
