--- a/css-block-layout.html
+++ b/css-block-layout.html
@@ -7,7 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+    * {
+      margin: 0;
+    }
+
     header {
+      margin-bottom: 16px;
       background-color: black;
     }
 
@@ -52,7 +57,7 @@
     }
 
     .n5 {
-      margin-bottom: 20px;
+      margin-bottom: 16px;
     }
 
     main p {
