--- a/css-block-layout.html
+++ b/css-block-layout.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>css-block-layout</title>
   <style>
     * {
       margin: 0;
@@ -75,6 +75,26 @@
       background-color: plum;
     }
 
+    .ww div {
+      display: inline-block;
+      width: 174px;
+      height: 34px;
+      border: 3px black solid;
+      background-color: purple;
+      margin-top: 15px;
+      line-height: 34px;
+      text-align: center;
+    }
+
+    .ww div:nth-child(3n+2) {
+      margin-left: 26px;
+      /* margin-top: -40px; */
+    }
+
+    .ww div:nth-child(3n) {
+      margin-left: 26px;
+    }
+
   </style>
 </head>
 
@@ -105,6 +125,20 @@
       <div>产品</div>
       <div>产品</div>
       <div>边框宽度3px</div>
+      <div>产品</div>
+      <div>产品</div>
+    </div>
+    <div class="ww">
+      <div>产品</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>产品</div>
       <div>产品</div>
       <div>产品</div>
     </div>
