--- a/qq-mail-inline.html
+++ b/qq-mail-inline.html
@@ -12,6 +12,10 @@
       font-size: 0;
     }
 
+    body {
+      min-height: 800px;
+    }
+
     .header {
       display: inline-block;
       width: 100%;
@@ -34,7 +38,7 @@
     main {
       display: inline-block;
       margin-left: 200px;
-      margin-top: -100%;
+      margin-top: -100vh;
       width: calc(100% - 200px);
       height: calc(100vh - 100px);
       border-left: 2px solid;
