--- a/css-block-layout.html
+++ b/css-block-layout.html
@@ -75,7 +75,7 @@
       background-color: plum;
     }
 
-    .ww div {
+    .ww span {
       display: inline-block;
       width: 174px;
       height: 34px;
@@ -86,12 +86,16 @@
       text-align: center;
     }
 
-    .ww div:nth-child(3n+2) {
+    .ww span:hover {
+      background-color: paleturquoise;
+    }
+
+    .ww span:nth-child(3n+2) {
       margin-left: 26px;
       /* margin-top: -40px; */
     }
 
-    .ww div:nth-child(3n) {
+    .ww span:nth-child(3n) {
       margin-left: 26px;
     }
 
@@ -129,18 +133,18 @@
       <div>产品</div>
     </div>
     <div class="ww">
-      <div>产品</div>
-      <div>产品</div>
-      <div>产品</div>
-      <div>产品</div>
-      <div>产品</div>
-      <div>产品</div>
-      <div>产品</div>
-      <div>产品</div>
-      <div>产品</div>
-      <div>产品</div>
-      <div>产品</div>
-      <div>产品</div>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
     </div>
     <p class="n1">link</p>
     <p>link</p>
