--- a/oald-layout-flex.html
+++ b/oald-layout-flex.html
@@ -235,7 +235,7 @@
         dolor earum nostrum quia.
       </p>
     </div>
-    <div class="right1 nav">1
+    <div class="right1 nav">
       <h1>Vocabulary</h1>
     </div>
     <div class="right2 nav">
