--- a/oald-layout-flex.html
+++ b/oald-layout-flex.html
@@ -12,7 +12,7 @@
     }
 
     body {
-      min-width: 930px;
+      /* min-width: 930px; */
     }
 
     .box {
@@ -28,7 +28,7 @@
     }
 
     .main {
-      width: 100%;
+      flex: 1;
       background-color: aqua;
       border-right: 2px solid;
     }
