--- a/mi/index.html
+++ b/mi/index.html
@@ -62,12 +62,72 @@
       <ul class="nav_center">
         <li>
           <a href="#">Xiaomi手机</a>
+          <div class='nav_menu'>
+            <ul class="container">
+              <li>
+                <a href="#">
+                  <img
+                    src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/c758eb7e0dce4307c62c47155519bc80.png?thumb=1&w=240&h=165&f=webp&q=90"
+                    alt="">
+                  <p>Xiaomi 13</p>
+                  <p>3999元起</p>
+                </a>
+              </li>
+              <li></li>
+              <li>
+                <a href="#">
+                  <img
+                    src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/11e28a0a7c6a2ca07f0dc2044d3858c2.png?thumb=1&w=240&h=165&f=webp&q=90"
+                    alt="">
+                  <p>Xiaomi 13 Pro</p>
+                  <p>4999元起</p>
+                </a>
+              </li>
+              <li></li>
+              <li>
+                <a href="#">
+                  <img
+                    src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/581f3a690e6803add02e4c9fde98cb78.png?thumb=1&w=240&h=165&f=webp&q=90"
+                    alt="">
+                  <p>Xiaomi MIX Fold 2</p>
+                  <p>8999元起</p>
+                </a>
+              </li>
+              <li></li>
+              <li>
+                <a href="#">
+                  <img
+                    src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/4ef3713521fb9d7f114aa8bb152e220d.png?thumb=1&w=240&h=165&f=webp&q=90"
+                    alt="">
+                  <p>Xiaomi Civi 2</p>
+                  <p>2299元起</p>
+                </a>
+              </li>
+              <li></li>
+              <li>
+                <a href="#">
+                  <img
+                    src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/fea69fb5990da9dfc909aa8279aaea7e.png?thumb=1&w=240&h=165&f=webp&q=90"
+                    alt="">
+                  <p>Xiaomi 11 青春活力版</p>
+                  <p>1399元起</p>
+                </a>
+              </li>
+              <li></li>
+              <li>
+                <a href="#">
+                  <img
+                    src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/9c06f92c3216c90a566916e719935018.png?thumb=1&w=240&h=165&f=webp&q=90"
+                    alt="">
+                  <p>Xiaomi 13 限量定制色</p>
+                  <p>4999元起</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+
         </li>
-        <li><a href="#">Redmi手机</a>
-          <ul class="nav_menu ">
-            <li></li>
-          </ul>
-        </li>
+        <li><a href="#">Redmi手机</a></li>
         <li><a href="#">电视</a></li>
         <li><a href="#">笔记本</a></li>
         <li><a href="#">平板</a></li>
