--- a/bootstrap-table.html
+++ b/bootstrap-table.html
@@ -5,54 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/table.css">
   <title>bootstrap-table</title>
   <style>
     body {
       background-color: rgba(0, 0, 0, .9);
-    }
-
-    .table {
-      margin: 200px auto;
-      width: 800px;
-      border-collapse: collapse;
-      color: #fff;
-    }
-
-    thead {
-
-      border-top: 1px solid #DEE2E6;
-      border-bottom: 2px solid #DEE2E6;
-    }
-
-    th {
-      text-align: left;
-    }
-
-    tbody tr:nth-child(n+2) th,
-    tbody tr:nth-child(n+2) td {
-      border-top: 1px solid #DEE2E6;
-    }
-
-    .table-dark {
-      background-color: #212529;
-    }
-
-    .table-striped tbody tr:nth-child(2n+1) {
-      background-color: #2C2E31;
-    }
-
-    .table-bordered th,
-    .table-bordered td {
-      border: 1px solid #DEE2E6;
-    }
-
-    .table-hover tbody tr:hover {
-      background-color: rgba(0, 0, 0, .9);
-    }
-
-    .table-sm th,
-    .table-sm td {
-      padding: 2em;
     }
 
   </style>
