--- a/mi/index.html
+++ b/mi/index.html
@@ -151,6 +151,57 @@
       </div>
     </nav>
   </div>
+  <!-- 固定侧边 -->
+  <div class="fixed">
+    <ul>
+      <li>
+        <div>
+          <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/78c30d4f259ed43ab20e810a522a6249.png" alt="">
+          <span>扫码领取新人百元礼包</span>
+        </div>
+        <a href="#">
+          <img src="https://i8.mifile.cn/b2c-mimall-media/98a23aae70f25798192693f21c4d4039.png" alt="">
+          <img src="https://i8.mifile.cn/b2c-mimall-media/74c4fcb4475af8308e9a670db9c01fdf.png" alt="">
+          手机APP
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="https://i8.mifile.cn/b2c-mimall-media/55cad219421bee03a801775e7309b920.png" alt="">
+          <img src="https://i8.mifile.cn/b2c-mimall-media/41f858550f42eb1770b97faf219ae215.png" alt="">
+          个人中心
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/12eb0965ab33dc8e05870911b90f3f13.png" alt="">
+          <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/95fbf0081a06eec7be4d35e277faeca0.png" alt="">
+          售后服务
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="https://i8.mifile.cn/b2c-mimall-media/4f036ae4d45002b2a6fb6756cedebf02.png" alt="">
+          <img src="https://i8.mifile.cn/b2c-mimall-media/5e9f2b1b0da09ac3b3961378284ef2d4.png" alt="">
+          人工客服
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="https://i8.mifile.cn/b2c-mimall-media/d7db56d1d850113f016c95e289e36efa.png" alt="">
+          <img src="https://i8.mifile.cn/b2c-mimall-media/692a6c3b0a93a24f74a29c0f9d68ec71.png" alt="">
+          购物车
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="https://i1.mifile.cn/f/i/2018/home/totop.png" alt="">
+          <img src="https://i1.mifile.cn/f/i/2018/home/totop_hover.png" alt="">
+          回顶部
+        </a>
+      </li>
+    </ul>
+  </div>
   <!-- 侧边栏与banner -->
   <div class="container home">
     <!-- 左侧边栏 -->
@@ -572,7 +623,109 @@
         </ul>
       </div>
     </div>
-
+    <div class="box1 container">
+      <div class="box1_hd">
+        <h1>智能穿戴</h1>
+        <a href="#">查看更多</a>
+      </div>
+      <div class="box1_bd">
+        <ul>
+          <li>
+            <a href="#">
+              <img
+                src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/c9550c95ee33a22dc8db677dada00f09.jpg?thumb=1&w=351&h=921&f=webp&q=90"
+                alt="">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/8b046feca0a7bb3f7b961a9690babb1b.jpg?thumb=1&w=300&h=300&f=webp&q=90"
+                alt="">
+              <h3>Redmi Note 12 Turbo</h3>
+              <p>狂暴引擎 超强性能释放</p>
+              <p>1999元起</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/a6cec580260ceb20ae6a885c2c65c611.png?thumb=1&w=300&h=300&f=webp&q=90"
+                alt="">
+              <h3>Redmi K60</h3>
+              <p>骁龙8+丨2K 高光直屏丨5500mAh+67...</p>
+              <p>2499元起<span>2699元</span></p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/f37dd30477e7ba040c7fb69c31ad8bf3.png?thumb=1&w=300&h=300&f=webp&q=90"
+                alt="">
+              <h3>Redmi K60 Pro</h3>
+              <p>【第二代骁龙8】狂暴引擎</p>
+              <p>3299元起<span>3599元</span></p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="https://cdn.cnbj1.fds.api.mi-img.com/nr-pub/202212251443_29b17941a7365948446bd193011d9241.png?thumb=1&w=300&h=300&f=webp&q=90"
+                alt="">
+              <h3>Redmi Note 12 Pro</h3>
+              <p>高通骁龙778G，OLED柔性直屏+一亿...</p>
+              <p>1699元起</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="https://cdn.cnbj1.fds.api.mi-img.com/nr-pub/202211292351_92aba2c69123166a74ba2e2b525b1ae2.png?thumb=1&w=300&h=300&f=webp&q=90"
+                alt="">
+              <h3>Xiaomi 13 限量定制色</h3>
+              <p>全新第二代骁龙8丨徕卡专业光学镜头...</p>
+              <p>4999元起</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/aa047170a22d9f0852254aa36df5f5f0.png?thumb=1&w=300&h=300&f=webp&q=90"
+                alt="">
+              <h3>Xiaomi 13 Pro</h3>
+              <p>全新第二代骁龙8丨徕卡专业光学镜头...</p>
+              <p>4999元起</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/94c6497b70f2e881460cb232082a0da6.png?thumb=1&w=300&h=300&f=webp&q=90"
+                alt="">
+              <h3>Xiaomi 13</h3>
+              <p>全新第二代骁龙8丨徕卡专业光学镜头...</p>
+              <p>3999元起</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <h3>Xiaomi降噪蓝牙耳机Necklace</h3>
+              <p>399元</p>
+              <img
+                src="https://cdn.cnbj1.fds.api.mi-img.com/nr-pub/202209261427_67cd5fddb341f0e0fb0a2295e643b0d8.png?thumb=1&w=150&h=150&f=webp&q=90"
+                alt="">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <h3>浏览更多</h3>
+              <p>耳机</p>
+              <i class="iconfont">&#xe603;</i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <div class="bottom_banner container">
       <a href="#">
         <img
