--- a/noi.html
+++ b/noi.html
@@ -403,7 +403,7 @@
   
 </script>
 
-<script id="ch0104/20" type="">
+<script id="ch0104/20" type="111">
   var a = +prompt()
   var b = +prompt()
   var c = +prompt()
@@ -417,8 +417,8 @@
     x2 = (-b - Math.sqrt(b * b - 4 * a * c)) / (2 * a)
     console.log("x1=" + x1.toFixed(5) + ";x2=" + x2.toFixed(5))
   } else {
-    x1 = (-b / (2 * a)).toFixed(5) + '+' + Math.sqrt(4 * a * c - b * b) / (2 * a).toFixed(5) + 'i'
-    x2 = (-b / (2 * a)).toFixed(5) + '-' + Math.sqrt(4 * a * c - b * b) / (2 * a).toFixed(5) + 'i'
+    x1 = (-b / (2 * a)).toFixed(5) + '+' + (Math.sqrt(4 * a * c - b * b) / (2 * a)).toFixed(5) + 'i'
+    x2 = (-b / (2 * a)).toFixed(5) + '-' + (Math.sqrt(4 * a * c - b * b) / (2 * a)).toFixed(5) + 'i'
     console.log("x1=" + x1 + ";x2=" + x2)
   }
 </script>
